--- a/README.rmd
+++ b/README.rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 options(tibble.print_min = 5, tibble.print_max = 5)
 ```
 
-# EuroleagueR
+# euroleagueR <img src="man/figures/logo.png" align="right" width="181" height="201"/>
 
 <!-- badges: start -->
 [![Version-Number](https://img.shields.io/github/r-package/v/JaseZiv/euroleagueR?label=euroleagueR (Dev))](https://github.com/JaseZiv/euroleagueR/)
